syntax = "proto3";
package newsletter.newsletter;

option go_package = "newsletter/x/newsletter/types";

message Newsletter {
  string index = 1; 
  string title = 2; 
  string description = 3; 
  string price = 4; 
  repeated string subscriberList = 5;
  
}

