syntax = "proto3";
package newsletter.newsletter;

option go_package = "newsletter/x/newsletter/types";

message NewslettersBasic {
  
  string title = 1; 
  uint64 subscriberCount = 2; 
}
